# agent

./: .env.example  .gitignore  README.md  api.py  config.example.toml  debug_classification.py  main.py  pyproject.toml  stock_assistant.py  test_config.py  tzzb_api_probe.py
agent/: README.md  config.example.toml  pyproject.toml
agent/src/stock_agent/: __init__.py  __main__.py  cli.py  config.py  graph.py  llm.py  mcp_client.py  state.py
agent/src/stock_agent/nodes/: __init__.py  _safe.py  diagnose.py  error_handler.py  investigate.py  render.py  report.py  research.py
agent/src/stock_agent/render/: __init__.py  markdown.py
agent/src/stock_agent/schema/: __init__.py  report.py  validate.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
launchd/: com.local.etf-position-assistant.plist
mcp/: .env.example  Dockerfile  README.md  config.example.toml  pyproject.toml
mcp/src/stock_mcp/: __init__.py  __main__.py  cli.py  context.py  registry.py
mcp/src/stock_mcp/analytics/: __init__.py  portfolio.py  stats.py  technical.py
mcp/src/stock_mcp/core/: __init__.py  config.py  errors.py  http.py  logging.py  math.py
mcp/src/stock_mcp/domain/: __init__.py  classification.py  holding.py  snapshot.py
mcp/src/stock_mcp/persistence/: snapshots.py
mcp/src/stock_mcp/providers/: __init__.py  eastmoney_fund.py  kline.py  tzzb.py
mcp/src/stock_mcp/providers/search/: opencli.py  web_fetch.py  web_read.py
mcp/src/stock_mcp/server/: __init__.py  handler.py  http.py  jsonrpc.py  stdio.py
mcp/src/stock_mcp/tools/: __init__.py  etf.py  holdings.py  ledger.py  snapshots.py  technical.py  web.py
mcp/tests/: conftest.py  test_protocol.py  test_providers_tzzb.py  test_tools_etf.py  test_tools_holdings.py  test_tools_ledger.py  test_tools_technical.py
scripts/: opencli-browse.sh  opencli-cleanup.sh  skill_agent_market_smoke.py  test_ddgs.py
stock_assistant/: __init__.py  agent.py  agent_executor.py  agent_llm.py  agent_loop.py  agent_tools.py  agent_trace.py  agent_workspace.py  analysis.py  classification.py  cli.py  config.py  eastmoney.py  llm.py  llm_tools.py  market.py  memory.py  models.py  portfolio.py  report.py  search.py  tzzb.py  utils.py
(+64 files in other folders)
