[project]
name = "stock"
version = "0.1.0"
description = "Local ETF position assistant with Tonghuashun ledger API integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "openai>=1.68.2",
    "playwright>=1.59.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_assistant", "src/api"]
