[project]
name = "stock-agent"
version = "0.1.0"
description = "LangGraph-based investment diagnosis agent with MCP tool integration"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=0.3.0",
    "openai>=1.60.0",
    "httpx>=0.27.0",
    "toml>=0.10.2",
]

[project.scripts]
stock-agent = "stock_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_agent"]
