[project]
name = "stock-mcp"
version = "0.1.0"
description = "Decoupled standalone Stock Assistant MCP Server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "toml>=0.10.2",
    "httpx>=0.27.0",
]

[project.scripts]
stock-mcp = "stock_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_mcp"]
